lab1/Test/L1-A-2-69.output
Error Type B at Line 1
Error Type B at Line 5
Error Type B at Line 7
Error Type B at Line 9
Error Type B at Line 12
