lab1/Test/L1-A-2-69.cmm
float ( ) {
  int j3FC [ 1906819536 ] = ! w6g0U5kN * BCkFewwwcvL 
    - N1u5ZTiiJN + C0sR9pQ0V2Y >= Lx == qEcg9i7zpw2H5 
    >= yhtQFk993G == LIg3AgzFuLS6d_ <= ITJqgM > aopPCjVLGDSxy 
    && ih1pWxd9bCub42 , qBq4ik [ ] [ 1903605642 ] [ 550584615 
    ] = W_o ;
  float [ 42259209 ] [ 1187441777 ] [ 1984889661 ] 
    [ 1842189652 ] , ZbPpF_ ;
  if qcJqFjMhCr6rbD1Fy ( XGLG73DUyNcFDKSElu ) . kOmVB5FNxNvQ 
    . _t8ZHkvj_In . XCkVspIhR [ ugDLJh_ ] * i0CoPVJpxooJ 
    / sAK > eNR9lzETDK1yyFQ )   nRp ;
else   if ( FYOs2T9kGY   if ( CQ5c_Ro173WvwzJVFHfi 
    )   yfRtZ ;



}
